--- a/src/app/style/globals.css
+++ b/src/app/style/globals.css
@@ -15,6 +15,6 @@
 }
 
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Times New Roman', Times, serif;
   @apply bg-gray-50 text-gray-900;
 }
